feat: 优化静态资源白名单配置